--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/styles.css" rel="stylesheet" />
+    <link href="./styles.css" rel="stylesheet" />
     <title>Puma Fragrances</title>
   </head>
   <body>
     <div id="logoContainer">
-      <img id="logoPicture" src="/media/logo-puma.png" alt="Logo" />
+      <img id="logoPicture" src="./media/logo-puma.png" alt="Logo" />
     </div>
     <div id="videoContainer">
       <video
-        src="/media/video-puma.mp4"
+        src="./media/video-puma.mp4"
         id="videoPuma"
         controls
         autoplay
@@ -21,10 +21,10 @@
       ></video>
     </div>
     <div id="deoContainer">
-      <img id="deoPicture" src="/media/déodo.png" alt="Déodorant" />
+      <img id="deoPicture" src="./media/déodo.png" alt="Déodorant" />
     </div>
     <div id="chevron">
-      <img id="fleche" src="/media/lafleche.png" alt="Une flèche" />
+      <img id="fleche" src="./media/lafleche.png" alt="Une flèche" />
     </div>
     <div id="footerContainer">
       <div id="textHide">
@@ -35,14 +35,14 @@
         </div>
       </div>
       <div id="test">
-        <img id="localisation" src="/media/mapPic.png" alt="Localisation" />
+        <img id="localisation" src="./media/mapPic.png" alt="Localisation" />
       </div>
     </div>
     <div id="circleContainer">
       <div id="bottomTitle">EN PROFITER</div>
       <div id="circle"></div>
     </div>
-    <script type="text/javascript" src="/index.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
   </body>
 </html>
 
